<resources>
    <string name="app_name">Macro Tracker</string>
    <string name="action_show_items">Show Items</string>
    <string name="action_settings">Settings</string>
    <string name="notes"><b><u>Notes</u></b></string>
    <string name="set_date">Set Date</string>
    <string name="picture_bw_text">BW in this picture:</string>
    <string name="select_date_from"><b>Date from: </b></string>
    <string name="select_date_to"><b>Date to: </b></string>
    <string name="to_date"><b>Select To</b></string>
    <string name="from_date"><b>Select From</b></string>
    <string name="average_calories">Average Calories:</string>
    <string name="average_carbs">Average Carbs:</string>
    <string name="average_protein">Average Protein:</string>
    <string name="average_fats">Average Fats:</string>
    <string name="your_progress"><b><u>Your Progress:</u></b></string>
    <string name="fats">Fats</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="add">Add</string>
    <string name="fatsColon">Fats: </string>
    <string name="carbsColon">Carbs: </string>
    <string name="itemNameColon">Item Name: </string>
    <string name="done">Done</string>
    <string name="whatYouHad">What you had: </string>
    <string name="addPicture">Take picture</string>
    <string name="date">Date</string>
    <string name="proteinColon">Protein: </string>
    <string name="caloriesColon">Calories: </string>
    <string name="macrosColon">Macros: </string>
    <string name="description">Description</string>
    <string name="Food_Log"><b>Food Log</b></string>
    <string name="records"><b>Records</b></string>
    <string name="track_progress"><b>Track Progress</b></string>
    <string name="weightkg">Weight\n(kg)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
