<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.AddItemSeperately">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/itemNameColon"
        app:layout_constraintBaseline_toBaselineOf="@+id/fooditemEditText"
        app:layout_constraintEnd_toStartOf="@+id/fooditemEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fooditemEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="i.e. 100g Rice"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addbtn" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/carbsColon"
        app:layout_constraintBaseline_toBaselineOf="@+id/carbsEditText"
        app:layout_constraintEnd_toStartOf="@+id/carbsEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/carbsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="i.e. 80 (grams)"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/fooditemEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fooditemEditText"
        app:layout_constraintTop_toBottomOf="@+id/fooditemEditText" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/protein"
        app:layout_constraintBaseline_toBaselineOf="@+id/proteinEditText"
        app:layout_constraintEnd_toStartOf="@+id/proteinEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/proteinEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="i.e. 10 (grams)"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/carbsEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/carbsEditText"
        app:layout_constraintTop_toBottomOf="@+id/carbsEditText" />

    <EditText
        android:id="@+id/fatEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="i.e. 5 (grams)"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/proteinEditText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/proteinEditText"
        app:layout_constraintTop_toBottomOf="@+id/proteinEditText" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fatsColon"
        app:layout_constraintBaseline_toBaselineOf="@+id/fatEditText"
        app:layout_constraintEnd_toStartOf="@+id/fatEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addbtn"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />


</androidx.constraintlayout.widget.ConstraintLayout>