<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/itemNameTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/itemNameColon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/macrosColon"
        app:layout_constraintEnd_toEndOf="@+id/caloriestextview"
        app:layout_constraintStart_toStartOf="@+id/caloriestextview"
        app:layout_constraintTop_toBottomOf="@+id/caloriestextview" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="8dp"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/itemNameTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toEndOf="@+id/itemNameTextview" />

    <TextView
        android:id="@+id/macros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="@+id/calories"
        app:layout_constraintStart_toStartOf="@+id/calories" />

    <TextView
        android:id="@+id/caloriestextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/caloriesColon"
        app:layout_constraintEnd_toEndOf="@+id/itemNameTextview"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="@+id/itemNameTextview"
        app:layout_constraintTop_toBottomOf="@+id/itemNameTextview" />

    <TextView
        android:id="@+id/calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/caloriestextview"
        app:layout_constraintEnd_toEndOf="@+id/itemName"
        app:layout_constraintStart_toStartOf="@+id/itemName" />
</androidx.constraintlayout.widget.ConstraintLayout>